--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,14 +1,4 @@
-<nav>
-    <ul>
-        <li>
-            <a href="/">
-                Convert Voice to Text
-            </a>
-           </li>
-        <li>
-            <a href="/realtime">
-                Realtime Voice to Text
-            </a>
-        </li>
-    </ul>
-</nav>
+<div class="nav">
+  <a href="/" class="button"> Convert Voice to Text </a>
+  <a href="/realtime" class="button"> Realtime Voice to Text </a>
+</div>
